# autodataforge

./: .env.example  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  LICENSE  README.md  ROADMAP.md  SECURITY.md  docker-compose.yml  pyproject.toml  vds.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
docs/: AGENT_ARCHITECTURE.md  AGENT_FRAMEWORK.md  ANALYST.md  ANNOTATION_WORKSPACE.md  BASELINE.md  DECISION_AGENT.md  DETECTION_ENGINE.md  EXECUTION_AGENT.md  MCP_SERVER.md  MEMORY_AGENT.md  PLANNER.md  PLANNER_AGENT.md  PROJECT_WORKSPACE.md  TASK_ORCHESTRATOR.md  VERSION_NOTES.md  desktop_gui.md  engineering_memory.md
scripts/: analyst_eval.py  benchmark_suite.py  gui_screenshots.py  memory_eval.py  planner_eval.py  provider_overhead.py  vlm_verifier_eval.py
tests/: conftest.py  test_agent_framework.py  test_analyst_agent.py  test_benchmark.py  test_bootstrap.py  test_comparison.py  test_export.py  test_gui.py  test_ingest.py  test_intelligence_workspace.py  test_knowledge_center.py  test_llm_client.py  test_mcp_server.py  test_memory.py  test_models.py  test_operations_center.py  test_pipeline_e2e.py  test_pipeline_workspace.py  test_planner.py  test_planner_agent.py  test_planner_workspace.py  test_providers.py  test_quality.py  test_reporting.py  test_stress.py  test_v2_agents.py  test_v2_decision.py  test_v2_execution.py  test_v2_memory.py  test_v2_planner.py  test_v2_task_orchestrator.py  test_verification.py  test_verification_workspace.py  test_video_import.py  test_vlm_verifier.py  test_yolo.py
vds/: __init__.py  benchmark.py  comparison.py  container.py  logging.py  reporting.py
vds/agents/: __init__.py  analyst.py  analyst_agent.py  base.py  cost.py  llm.py  messages.py  orchestrator.py  pipeline.py  planner.py  planner_agent.py  verifier.py  vlm_verifier.py
vds/api/: __init__.py  app.py
vds/cli/: __init__.py  main.py
vds/config/: __init__.py  settings.py
vds/core/: __init__.py  contracts.py  enums.py  errors.py  geometry.py
vds/curation/: __init__.py
vds/engine/: __init__.py  labeler.py
vds/gui/: __init__.py  __main__.py  app.py  controller.py  intelligence_export.py  intelligence_view.py  knowledge_export.py  knowledge_view.py  main_window.py  notifications.py  operations_export.py  operations_view.py  pipeline_view.py  planner_view.py  settings.py  theme.py  threads.py  verification_view.py  video_import_dialog.py  video_import_view.py
vds/ingest/: __init__.py  service.py
vds/jobs/: __init__.py  queue.py  worker.py
vds/mcp/: __init__.py  server.py  stdio.py
vds/memory/: __init__.py  builder.py  schema.py  service.py  similarity.py  store.py  trends.py
vds/models/: __init__.py  gpu.py  protocols.py  registry.py
vds/quality/: __init__.py  metrics.py
(+63 files in other folders)
